# game

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  config.rs  wrangler.toml
cloudflare/: .gitignore  Cargo.toml  README.md
cloudflare/counter/: worker-configuration.d.ts
cloudflare/counter/src/: index.ts
cloudflare/src/: game.rs  lib.rs
corkboard/: README.md
corkboard-cloudflare/src/: lib.rs
corkboard-server/: Cargo.toml
corkboard-server/src/: storage.rs
corkboard/cloudflare/: .gitignore  Cargo.toml  README.md
corkboard/cloudflare/src/: lib.rs
corkboard/logic/: Cargo.toml  README.md
corkboard/logic/src/: lib.rs
corkboard/server/: Cargo.toml  README.md
corkboard/server/src/: codec.rs  main.rs  media_manager.rs  storage.rs
counter/: bun.lockb  package.json  worker-configuration.d.ts
counter/src/: index.ts
game/: README.md
game/cloudflare/: Cargo.toml  README.md
game/cloudflare/counter/: wrangler.toml
game/cloudflare/src/: game.rs  game_manager.rs  lib.rs
game/logic/: Cargo.toml
game/logic/names/romans/: nomen.txt
game/logic/src/: constants.rs  game.rs  lib.rs  session.rs  settings.rs  teams.rs  watcher.rs
game/logic/src/fuiz/: common.rs  config.rs  media.rs  multiple_choice.rs  order.rs  type_answer.rs
game/logic/src/names/: mod.rs  pets.rs  word_list.rs
game/server/: Cargo.toml  README.md
game/server/src/: main.rs
game/server/src/game_manager/: mod.rs
game_manager/: Cargo.toml  wrangler.toml
game_manager/src/: lib.rs
logic/: Cargo.toml  README.md
logic/names/romans/: cognomen.txt
logic/src/: game.rs  game_id.rs  leaderboard.rs
logic/src/fuiz/: config.rs  order.rs
logic/src/names/: mod.rs
names/romans/: praenomen.txt
server/: Cargo.toml  README.md
server/src/: clashmap.rs  main.rs
server/src/game_manager/: mod.rs
src/: config.rs  constants.rs  game.rs  game_id.rs  game_manager.rs  leaderboard.rs  lib.rs  main.rs  names.rs  session.rs  teams.rs  watcher.rs
src/fuiz/: common.rs  config.rs  media.rs  mod.rs  multiple_choice.rs  order.rs  type_answer.rs
src/game_manager/: mod.rs
src/names/: mod.rs  pets.rs  romans.rs  word_list.rs
