[package]
name = "fuiz-server"
version = "0.1.0"
edition = "2021"

[features]
expose-network = []

[dependencies]
fuiz = { git = "https://gitlab.com/fuiz/game.git" }
actix-cors = "0.7"
actix-web = "4"
actix-ws = "0.4"
dashmap = "6"
derive-where = "1"
enum-map = { version = "2", features = ["serde"] }
fastrand = "2"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
garde-actix-web = "0.12"
garde = "0.22"
parking_lot = "0.12"
bytes = "1.5"
