[package]
name = "fuiz-game-manager"
version = "0.1.0"
edition = "2024"
authors = ["Khaleel Al-Adhami <khaleel.aladhami@gmail.com>"]


[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
console_error_panic_hook = { version = "0.1" }
http = "1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["serde_derive", "derive", "alloc"] }
serde_json = "1.0"
web-time = { version = "1.1", features = ["serde"] }
fuiz = { git = "https://gitlab.com/opencode-mit/fuiz/game.git" }
