[package]
name = "corkboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
figment = { version = "0.10", features = ["env"] }
actix-web = "4"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hex = "0.1.0"
dashmap = "6.1"
thiserror = "2.0"
pretty_env_logger = "0.5"
actix-cors = "0.7"
mime = "0.3"
corkboard = { path = "../logic" }
image = { version = "0.25", default-features = false, features = [
    "avif",
    "gif",
    "hdr",
    "jpeg",
    "png",
    "tiff",
    "webp",
] }
getrandom = "0.4.1"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
