[package]
name = "corkboard-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
figment = { version = "0.10", features = ["env"] }
actix-web = "4"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hex = "0.1.0"
thiserror = "2.0"
pretty_env_logger = "0.5"
actix-cors = "0.7"
mime = "0.3"
corkboard = { path = "../logic" }
image = { version = "0.25", default-features = false, features = [
    "avif",
    "gif",
    "hdr",
    "jpeg",
    "png",
    "tiff",
    "webp",
] }
getrandom = "0.4.1"
moka = { version = "0.12.15", features = ["future"] }
tokio = { version = "1.50.0", features = ["fs"] }

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
